--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
     <title>Welcome to star web</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #fff;
+            color: #222;
+            transition: background 0.3s, color 0.3s;
+        }
+        .sidebar {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 220px;
+            height: 100%;
+            background: #222;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            padding-top: 40px;
+            box-shadow: 2px 0 8px rgba(0,0,0,0.08);
+            z-index: 100;
+            transition: transform 0.3s;
+        }
+        .sidebar.closed {
+            transform: translateX(-100%);
+        }
+        .sidebar.open {
+            transform: translateX(0);
+        }
+        .sidebar button {
+            background: none;
+            border: none;
+            color: inherit;
+            font-size: 1.2rem;
+            padding: 18px 32px;
+            text-align: left;
+            cursor: pointer;
+            transition: background 0.2s;
+            width: 100%;
+        }
+        .sidebar button.active,
+        .sidebar button:hover {
+            background: #444;
+        }
+        .main-content {
+            margin-left: 220px;
+            padding: 40px 32px;
+            min-height: 100vh;
+            transition: background 0.3s, color 0.3s, margin-left 0.3s;
+        }
         .subscribe-btn {
             display: inline-block;
             padding: 24px 48px;
@@ -34,24 +83,200 @@
             transform: scale(0.96);
             box-shadow: 0 2px 8px rgba(0,0,0,0.18);
         }
+        /* Hamburger menu button */
+        .menu-btn {
+            display: none;
+            position: fixed;
+            top: 18px;
+            left: 18px;
+            z-index: 200;
+            width: 40px;
+            height: 40px;
+            background: #222;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        .menu-btn span {
+            display: block;
+            width: 24px;
+            height: 3px;
+            background: #fff;
+            margin: 5px 0;
+            border-radius: 2px;
+            transition: 0.3s;
+        }
+        /* Dark mode styles */
+        body.dark-mode, .main-content.dark-mode {
+            background: #181818;
+            color: #f1f1f1;
+        }
+        .sidebar.dark-mode {
+            background: #111;
+            color: #fff;
+        }
+        .sidebar.dark-mode button.active,
+        .sidebar.dark-mode button:hover {
+            background: #222;
+        }
+        .subscribe-btn.dark-mode {
+            background: #ff003c;
+            color: #fff;
+        }
+        .subscribe-btn.dark-mode:hover {
+            box-shadow: 0 0 24px 6px #ff003c, 0 4px 16px rgba(0,0,0,0.15);
+            background: #ff3366;
+        }
+        .subscribe-btn.dark-mode:active {
+            background: #c20000;
+        }
+        .menu-btn.dark-mode {
+            background: #111;
+        }
+        .menu-btn.dark-mode span {
+            background: #fff;
+        }
+        /* Responsive */
+        @media (max-width: 700px) {
+            .sidebar {
+                width: 180px;
+                padding-top: 20px;
+                transform: translateX(-100%);
+            }
+            .sidebar.open {
+                transform: translateX(0);
+            }
+            .main-content {
+                margin-left: 0;
+                padding: 20px 8px;
+            }
+            .menu-btn {
+                display: flex;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>
-🔥 Welcome to my channel! 🔥<br><br>
-If you love Roblox and especially Pls Donate, you’re in the right place! Here, you’ll find fun gameplay, crazy donation challenges, tips to grow your Robux, and epic reactions. Whether you’re here to learn new tricks, watch awesome giveaways, or just vibe with the Roblox community, this channel has something for you.<br><br>
-💸 Why subscribe?<br><br>
-* Exclusive Pls Donate content you won’t want to miss<br>
-* Entertaining streams & videos full of surprises<br>
-* A growing community of Roblox fans just like you<br>
-* The chance to be part of giveaways and shoutouts<br><br>
-👉 Hit that Subscribe button and join the journey—let’s make Roblox even more fun together!
-</h1>
-    <button class="subscribe-btn" onclick="subscribeClicked()">Subscribe</button>
+    <button class="menu-btn" id="menuBtn" onclick="toggleSidebar()" aria-label="Open sidebar">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <div class="sidebar closed" id="sidebar">
+        <button id="homeBtn" class="active" onclick="showSection('home')">Home</button>
+        <button id="settingBtn" onclick="showSection('setting')">Setting</button>
+        <button id="creditBtn" onclick="showSection('credit')">Credit</button>
+    </div>
+    <div class="main-content" id="mainContent">
+        <!-- Home Section -->
+        <div id="homeSection">
+            <h1>
+                🔥 Welcome to my channel! 🔥<br><br>
+                If you love Roblox and especially Pls Donate, you’re in the right place! Here, you’ll find fun gameplay, crazy donation challenges, tips to grow your Robux, and epic reactions. Whether you’re here to learn new tricks, watch awesome giveaways, or just vibe with the Roblox community, this channel has something for you.<br><br>
+                💸 Why subscribe?<br><br>
+                * Exclusive Pls Donate content you won’t want to miss<br>
+                * Entertaining streams & videos full of surprises<br>
+                * A growing community of Roblox fans just like you<br>
+                * The chance to be part of giveaways and shoutouts<br><br>
+                👉 Hit that Subscribe button and join the journey—let’s make Roblox even more fun together!
+            </h1>
+            <button class="subscribe-btn" id="subscribeBtn" onclick="subscribeClicked()">Subscribe</button>
+        </div>
+        <!-- Setting Section -->
+        <div id="settingSection" style="display:none;">
+            <h2>Settings</h2>
+            <label>
+                <input type="radio" name="mode" value="light" checked onchange="setMode('light')"> Light Mode
+            </label>
+            <br>
+            <label>
+                <input type="radio" name="mode" value="dark" onchange="setMode('dark')"> Dark Mode
+            </label>
+        </div>
+        <!-- Credit Section -->
+        <div id="creditSection" style="display:none;">
+            <h2>Credit</h2>
+            <p>All credits goes to ytstar69.</p>
+        </div>
+    </div>
     <script>
+        // Sidebar toggle for mobile
+        function toggleSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            sidebar.classList.toggle('open');
+            sidebar.classList.toggle('closed');
+        }
+
+        // Hide sidebar when clicking outside on mobile
+        document.addEventListener('click', function(e) {
+            const sidebar = document.getElementById('sidebar');
+            const menuBtn = document.getElementById('menuBtn');
+            if (window.innerWidth <= 700) {
+                if (!sidebar.contains(e.target) && !menuBtn.contains(e.target)) {
+                    sidebar.classList.remove('open');
+                    sidebar.classList.add('closed');
+                }
+            }
+        });
+
+        // Show section logic
+        function showSection(section) {
+            document.getElementById('homeBtn').classList.remove('active');
+            document.getElementById('settingBtn').classList.remove('active');
+            document.getElementById('creditBtn').classList.remove('active');
+            document.getElementById(section + 'Btn').classList.add('active');
+            document.getElementById('homeSection').style.display = section === 'home' ? '' : 'none';
+            document.getElementById('settingSection').style.display = section === 'setting' ? '' : 'none';
+            document.getElementById('creditSection').style.display = section === 'credit' ? '' : 'none';
+
+            // On mobile, close sidebar after selection
+            if (window.innerWidth <= 700) {
+                document.getElementById('sidebar').classList.remove('open');
+                document.getElementById('sidebar').classList.add('closed');
+            }
+        }
+
         function subscribeClicked() {
             window.location.href = "https://www.youtube.com/@not-starblox";
         }
+
+        function setMode(mode) {
+            const body = document.body;
+            const sidebar = document.getElementById('sidebar');
+            const mainContent = document.getElementById('mainContent');
+            const subscribeBtn = document.getElementById('subscribeBtn');
+            const menuBtn = document.getElementById('menuBtn');
+            if (mode === 'dark') {
+                body.classList.add('dark-mode');
+                sidebar.classList.add('dark-mode');
+                mainContent.classList.add('dark-mode');
+                if (subscribeBtn) subscribeBtn.classList.add('dark-mode');
+                menuBtn.classList.add('dark-mode');
+            } else {
+                body.classList.remove('dark-mode');
+                sidebar.classList.remove('dark-mode');
+                mainContent.classList.remove('dark-mode');
+                if (subscribeBtn) subscribeBtn.classList.remove('dark-mode');
+                menuBtn.classList.remove('dark-mode');
+            }
+        }
+
+        // Open sidebar by default on desktop, closed on mobile
+        function setSidebarInitialState() {
+            const sidebar = document.getElementById('sidebar');
+            if (window.innerWidth <= 700) {
+                sidebar.classList.remove('open');
+                sidebar.classList.add('closed');
+            } else {
+                sidebar.classList.remove('closed');
+                sidebar.classList.remove('open');
+            }
+        }
+        window.addEventListener('resize', setSidebarInitialState);
+        window.addEventListener('DOMContentLoaded', setSidebarInitialState);
     </script>
 </body>
 </html>
